fix alignment of herp

--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,7 @@
 }
 @layer components {
     .hero {
-        @apply absolute max-w-[768px]
+        @apply absolute max-w-[768px] mx-auto
     }
 
     .heading {
